--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:client": "vite build",
     "build:server": "cd server && tsc -p tsconfig.json",
     "build": "npm run build:client && npm run build:server",
-    "start": "node server/dist/index.js"
+    "start": "node server/dist/server/index.js"
   },
   "engines": {
     "node": ">=18"
